# Django-HealthRecordAPI

./: .env.example  .gitignore  Dockerfile  Health Record API Copy.postman_collection.json  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
core/: admin.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_user_available_days.py  0003_user_location_alter_notification_notification_type_and_more.py  0003_user_specialization.py
healthrecords/: admin_config.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
healthrecords/management/commands/: wait_for_db.py
healthrecords/tests/: __init__.py  conftest.py  setup_test_db.py  test_forms.py  test_models.py  test_settings.py  test_views.py
records/: models.py  serializers.py  urls.py  views.py
records/migrations/: 0001_initial.py  0002_remove_healthrecord_record_id_healthrecord_id.py
records/tests/: test_models.py  test_serializers.py  test_views.py
templates/admin/: base_site.html
